--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -35,8 +35,6 @@
 }
 
 footer {
-    min-height: 150px;
-
     @include media-breakpoint-down(lg) {
         min-height: 200px;
     }
